--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "start": "node dist/index.js",
     "dev": "nodemon ./index.ts"
   },
+  "prisma": {
+    "schema": "./src/prisma/schema.prisma"
+  },
   "keywords": [],
   "author": "gavo.ga",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "date-format": "^4.0.14",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
